data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_740.wast
;; 1. **Test Description**: Include a `br_table` instruction with multiple indices and a `nop` instruction between each target manipulation to ensure the `nop` does not alter the indices handling for branching.    - **Constraint**: Verifying correct skipping over `nop` without any impact on control flow.    - **Edge Case**: Ensuring `br_table` handles out-of-bound indices correctly without interference from `nop`.

(assert_invalid 
  (module 
    (func $br_table_test 
      (block $label0 
        (br_table 1 0 0 
          (i32.const 0) 
          (nop) 
          (br $label0) 
          (nop) 
          (br $label0) 
          (nop)))
  )
  "type mismatch"
)